manifests/doc-index-updater/overlays/non-prod/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: doc-index-updater-ingressgateway
  namespace: istio-system
spec:
  servers:
    - port:
        number: 443
        name: https-443-non-prod-mhra-gov-uk
        protocol: HTTPS
      hosts:
        - doc-index-updater.non-prod.mhra.gov.uk
      tls:
        mode: SIMPLE
        credentialName: cert-doc-index-updater
    - port:
        number: 443
        name: https-443-test-mhra-gov-uk
        protocol: HTTPS
      hosts:
        - doc-index-updater.test.mhra.gov.uk
      tls:
        mode: SIMPLE
        credentialName: test-mhra-gov-uk-cert
